===== 1.10 (Mar ??, 2014) =====
* Experimental video support
* CSS parsing optimization for ePubs (do not parse css files multiple times)
* CSS support improvement: added support for space-separated classes list

===== 1.9.6.1 (Feb 24, 2014) =====
* Fixed some config vaues reading (e.g. background)
* Updated Czech localization (by Marek Pavelka)

===== 1.9.6 (Feb 23, 2014) =====
* Config speed optimization
* Fixed bookmarks creation & browsing problem
* Fixed URL resolving (this also fixed bug with some catalogs created with calibre2opds)
* Do not search on qumran sites with cyrillic patterns
* Better network search logic

===== 1.9.5.5 (Feb 4, 2014) =====
* Fixed preference activity on Android 2.* devices

===== 1.9.5.4 (Feb 3, 2014) =====
* Preference activity in a separate process
* Fixed re-setting config value to default operation

===== 1.9.5.3 (Feb 1, 2014) =====
* Fixed YotaPhone second screen support
* Fixed color profile loading
* Updated Basque localization by Ibon Idoiaga Basaras
* Updated Czech localization (by Marek Pavelka)

===== 1.9.5.2 (Feb 1, 2014) =====
* Fixed one more possible crash on program start

===== 1.9.5.1 (Jan 31, 2014) =====
* Fixed possible crash on program start

===== 1.9.5 (Jan 31, 2014) =====
* Fixed back button behaviour
* Fixed recent books list
* Fixed possible crash in YotaPhone back screen service
* New config subsystem implementation
* Updated Czech localization (by Marek Pavelka)
* Updated Dutch localization (by Frank Fesevur)
* Special edition for Kindle Fire HD(X) devices
* Better detection of catalog where FBReader can write books
* Fixed Russian hyphenations even for devices with no koi8-r encoding
* Special search dialog for Nook Simple Touch
* New item "Install plugins" in the main menu

===== 1.9.4-nst (Jan 12, 2013) =====
* Special edition for Nook Simple Touch

===== 1.9.4 (Dec 23, 2013) =====
* YotaPhone back screen support
* Fullscreen mode in android 4.4 is now optional