@@ -38,6 +38,8 @@ public:
 
 protected:
 	virtual void storeData(const std::string &selector, const StyleSheetTable::AttributeMap &map);
+	std::string url2FullPath(const std::string &url) const;
+	virtual void importCSS(const std::string &path);
 
 private:
 	bool isControlSymbol(const char symbol);
@@ -54,6 +56,7 @@ private:
 	enum {
 		WAITING_FOR_SELECTOR,
 		SELECTOR,
+		IMPORT,
 		WAITING_FOR_ATTRIBUTE,
 		ATTRIBUTE_NAME,
 		ATTRIBUTE_VALUE,
@@ -61,6 +64,8 @@ private:
 	bool myInsideComment;
 	std::string mySelectorString;
 	StyleSheetTable::AttributeMap myMap;
+	std::vector<std::string> myImportVector;
+	bool myFirstRuleProcessed;
 
 friend class StyleSheetSingleStyleParser;
 };
@@ -117,6 +122,7 @@ public:
 
 private:
 	void store(const std::string &tag, const std::string &aClass, const StyleSheetTable::AttributeMap &map);
+	void importCSS(const std::string &path);
 
 private:
 	std::list<shared_ptr<Entry> > myEntries;
